--- a/index.html
+++ b/index.html
@@ -9,39 +9,57 @@
 </head>
 <body>
 <div id="timeline" class="tl-container">
-    <div class="tl-block" data-date="">
-        <div class="tl-hd"><h3>2010年</h3></div>
+
+</div>
+<script id="tl_block_tpl" type="text/template">
+    {{#data}}
+    <div class="tl-block">
+        <div class="tl-hd"><h3 id="tl-header-{{year}}-{{month}}">{{key}}{{keyUnit}}</h3></div>
         <ol class="tl-bd tl-clear">
             <li aria-hidden="true" class="tl-spine"><a href="#"><i></i></a></li>
-            <li class="tl-unit tl-unit-l">
-                <div class="tl-unit-content tl-unit-custom">
+            {{#unit}}
+            <li class="tl-unit {{#_isLeft}}tl-unit-l{{/_isLeft}} {{#_isRight}}tl-unit-r{{/_isRight}} ">
+                <div class="tl-unit-content tl-unit-custom" data-id="{{id}}">
                     <!-- unit content custom START -->
-                    <p class="title">Some Title</p>
-                    <p class="pic"><img src="http://media-cache-ec6.pinterest.com/upload/220606081718463558_oZCmnnMz_c.jpg" width="450" height="299"/></p>
-                    <p class="desc">Greek Yogurt Cheesecake with Pomegranate Syrup</p>
-                    <p class="meta"><span>喜欢</span><span class="dot">&dot;</span><span>评论</span></p>
+                    {{#title}}<p class="title">{{title}}</p>{{/title}}
+                    {{#img_url}}<p class="pic"><img src="{{img_url}}" width="{{img_width}}" height="{{img_height}}"/></p>{{/img_url}}
+                    {{#desc}}<p class="desc">{{desc}}</p>{{/desc}}
+                    <p class="meta"><span data-action="doLike">喜欢</span><span class="dot">&dot;</span><span data-action="doComment">评论</span></p>
                     <!-- unit content custom END -->
                 </div>
                 <b class="tl-unit-arrow"><i></i></b>
                 <b class="tl-unit-bullet"></b>
             </li>
-            <li class="tl-unit tl-unit-r">
-                <div class="tl-unit-content tl-unit-custom">
-                    <!-- unit content custom START -->
-                    <p class="title">Some Title</p>
-                    <p class="pic"><img src="http://media-cache0.pinterest.com/upload/457467274618647047_abbfnYYe_c.jpg" width="350" height="546"/></p>
-                    <p class="desc">Sunset with medieval Galata Tower called Christea Turris (the Tower of Christ in Latin) by the Genoese.</p>
-                    <p class="meta"><span>喜欢</span><span class="dot">&dot;</span><span>评论</span></p>
-                    <!-- unit content custom END -->
-                </div>
-                <b class="tl-unit-arrow"><i></i></b>
-                <b class="tl-unit-bullet"></b>
-            </li>
+            {{/unit}}
+            <!-- todo -->
         </ol>
-        <div class="tl-ft tl-loading"></div>
     </div>
-</div>
-
-<script src="http://seajs.org/dist/sea.js" data-main="./js/main"></script>
+    {{/data}}
+    {{^data}}
+    <div class="tl-block">
+        <div class="tl-ft tl-loading" data-action="doLike"></div>
+    </div>
+    {{/data}}
+</script>
+<script src="http://seajs.org/dist/sea.js"></script>
+<script>
+    (function() {
+        seajs.config({
+            base: "http://modules.seajs.org/",
+            alias: {
+                "$": "jquery/1.7.2/jquery",
+                "base": "base/0.9.16/base",
+                "mustache": "mustache/0.5.0/mustache",
+                "underscore": "underscore/1.3.3/underscore"
+            }
+        });
+        seajs.use(["./js/timeline"], function(TL) {
+            new TL({
+                "container": "#timeline",
+                "template": "#tl_block_tpl"
+            })
+        });
+    })();
+</script>
 </body>
 </html>
