fix selected cls when scrolling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="tl-unit-content tl-unit-custom">
                     <!-- unit content custom START -->
                     {{#title}}<p class="title">{{title}}</p>{{/title}}
-                    {{#img_url}}<p class="pic"><img src="{{img_url}}" width="{{_img_width}}" height="{{_img_height}}"/></p>{{/img_url}}
+                    {{#img_url}}<p class="pic"><img src="{{img_url}}" style="width: {{_img_width}}px;height: {{_img_height}}px;" /></p>{{/img_url}}
                     {{#desc}}<p class="desc">{{desc}}</p>{{/desc}}
                     <p class="meta"><span data-action="doLike">喜欢</span><span class="dot">&dot;</span><span data-action="doComment">评论</span></p>
                     <!-- unit content custom END -->
