--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 "unitTemplate": "#tl_unit_tpl",
                 "navTemplate": "#tl_navigator_tpl",
                 "orderBy": "month",
-                "imgWidth": 357
+                "imgWidth": 357,
+                //"dataUrl": "./zyh.js"
             })
         });
     })();
