--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 "navTemplate": "#tl_navigator_tpl",
                 "orderBy": "month",
                 "imgWidth": 357,
-                //"dataUrl": "./zyh.js"
+                "dataUrl": "./zyh.js"
             })
         });
     })();
