--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         </li>
     {{/block}}
 </script>
-<script src="http://seajs.org/dist/sea.js"></script>
+<script src="http://modules.spmjs.org/seajs/1.3.0/sea.js"></script>
 <script>
     (function() {
         seajs.config({
-            base: "http://modules.seajs.org/",
+            base: "http://modules.spmjs.org/",
             alias: {
                 "$": "jquery/1.7.2/jquery",
                 "base": "base/0.9.16/base",
