--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <script>
     (function() {
         seajs.config({
-            base: "http://modules.spmjs.org/",
+            base: "http://modules.spmjs.org/gallery/",
             alias: {
                 "$": "jquery/1.7.2/jquery",
                 "base": "base/0.9.16/base",
