--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 <script>
     (function() {
         seajs.config({
-            base: "http://modules.spmjs.org/gallery/",
+            base: "http://modules.spmjs.org/",
             alias: {
-                "$": "jquery/1.7.2/jquery",
-                "base": "base/0.9.16/base",
-                "mustache": "mustache/0.5.0/mustache",
-                "underscore": "underscore/1.3.3/underscore"
+                "$": "gallery/jquery/1.7.2/jquery",
+                "base": "arale/base/1.0.1/base",
+                "mustache": "gallery/mustache/0.5.0/mustache",
+                "underscore": "gallery/underscore/1.3.3/underscore"
             }
         });
         seajs.use(["./js/timeline"], function(TL) {
