--- a/index.html
+++ b/index.html
@@ -11,27 +11,26 @@
 <div id="timeline" class="tl-container"></div>
 <ul class="tl-navigator" id="timeline-nav"></ul>
 <script id="tl_block_tpl" type="text/template">
-    {{#block}}
-    <div class="tl-block" id="tl-header-{{^month}}{{year}}{{/month}}{{#month}}{{month}}{{/month}}">
+    {{#each block}}
+    <div class="tl-block" id="tl-header-{{#if month}}{{month}}{{else}}{{year}}{{/if}}">
         <div class="tl-hd"><h3>{{key}}</h3></div>
         <ol class="tl-bd tl-clear">
             <li aria-hidden="true" class="tl-spine"><a href="#"><i data-action="doAdd"></i></a></li>
         </ol>
     </div>
-    {{/block}}
-    {{^block}}
+    {{else}}
     <div class="tl-block">
         <div class="tl-ft tl-loading" data-action="doLike"></div>
     </div>
-    {{/block}}
+    {{/each}}
 </script>
 <script id="tl_unit_tpl" type="text/template">
-            <li class="tl-unit {{#_column}}tl-unit-{{_column}}{{/_column}}" data-id="{{id}}">
+            <li class="tl-unit {{#if _column }}tl-unit-{{_column}}{{/if}}" data-id="{{id}}">
                 <div class="tl-unit-content tl-unit-custom">
                     <!-- unit content custom START -->
-                    {{#title}}<p class="title">{{title}}</p>{{/title}}
-                    {{#img_url}}<p class="pic"><img src="{{img_url}}" style="width: {{_img_width}}px;height: {{_img_height}}px;" /></p>{{/img_url}}
-                    {{#desc}}<p class="desc">{{desc}}</p>{{/desc}}
+                    {{#if title}}<p class="title">{{title}}</p>{{/if}}
+                    {{#if img_url}}<p class="pic"><img src="{{img_url}}" style="width: {{_img_width}}px;height: {{_img_height}}px;" /></p>{{/if}}
+                    {{#if desc}}<p class="desc">{{desc}}</p>{{/if}}
                     <p class="meta"><span data-action="doLike">喜欢</span><span class="dot">&dot;</span><span data-action="doComment">评论</span></p>
                     <!-- unit content custom END -->
                 </div>
@@ -41,26 +40,25 @@
             <!-- todo -->
 </script>
 <script id="tl_navigator_tpl" type="text/template">
-    {{#block}}
-        <li><a href="#tl-header-{{^month}}{{year}}{{/month}}{{#month}}{{month}}{{/month}}">{{key}}</a>
-        {{#children}}
+    {{#each block}}
+        <li><a href="#tl-header-{{#if month}}{{month}}{{else}}{{year}}{{/if}}">{{key}}</a>
+        {{#if children}}
             <ul>
                 <li data-key="{{key}}"><a href="#">{{key}}</a></li>
             </ul>
-        {{/children}}
+        {{/if}}
         </li>
-    {{/block}}
+    {{/each}}
 </script>
-<script src="http://modules.spmjs.org/seajs/1.3.0/sea.js"></script>
+<script src="http://assets.spmjs.org/seajs/seajs/2.1.1/sea.js"></script>
 <script>
     (function() {
         seajs.config({
-            base: "http://modules.spmjs.org/",
             alias: {
-                "$": "gallery/jquery/1.7.2/jquery",
-                "base": "arale/base/1.0.1/base",
-                "mustache": "gallery/mustache/0.5.0/mustache",
-                "underscore": "gallery/underscore/1.3.3/underscore"
+                "$": "jquery/jquery/1.10.1/jquery",
+                "base": "arale/base/1.1.1/base",
+                "handlebars": "gallery/handlebars/1.0.2/handlebars",
+                "underscore": "gallery/underscore/1.4.4/underscore"
             }
         });
         seajs.use(["./js/timeline"], function(TL) {
